<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity">

    <ImageView
        android:id="@+id/imgPreview"
        android:layout_width="170dp"
        android:layout_height="185dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="95dp"
        android:layout_marginLeft="95dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="95dp"
        android:layout_marginRight="95dp"
        android:contentDescription="@string/lbl_bird_img_view"
        android:scaleType="centerCrop"
        tools:srcCompat="@tools:sample/avatars[3]" />

    <TextView
        android:id="@+id/txt_BirdName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imgPreview"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="13dp"
        android:layout_marginLeft="13dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="13dp"
        android:layout_marginRight="13dp"
        android:textAlignment="center"
        android:textSize="18sp"
        tools:text="@string/lbl_bird_name" />

    <TextView
        android:id="@+id/txt_birdDetails"
        android:layout_width="match_parent"
        android:layout_height="274dp"
        android:layout_below="@+id/btn_play"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginBottom="1dp"
        android:padding="10dp"
        android:scrollbars="vertical"
        tools:text="@string/lbl_bird_details" />

    <Button
        android:id="@+id/btn_play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_BirdName"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="126dp"
        android:layout_marginLeft="126dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="126dp"
        android:layout_marginRight="126dp"
        android:text="@string/btn_play_label"
        android:backgroundTint="@color/colorPrimary"
        tools:text="@string/btn_play_label" tools:targetApi="lollipop"/>

</RelativeLayout>