<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".AddBird">

    <TextView
        android:id="@+id/lbl_heading"
        android:layout_width="241dp"
        android:layout_height="32dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="13dp"
        android:layout_marginLeft="13dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="106dp"
        android:layout_marginRight="106dp"
        android:text="@string/lbl_add_new_bird"
        android:textSize="25sp"
        tools:text="@string/lbl_add_new_bird" />

    <EditText
        android:id="@+id/txt_name"
        android:layout_width="269dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lbl_heading"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="17dp"
        android:layout_marginLeft="17dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="13dp"
        android:layout_marginRight="13dp"
        android:layout_toEndOf="@+id/lbl_name"
        android:layout_toRightOf="@+id/lbl_name"
        android:ems="10"
        android:hint="@string/hint_txt_name"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/lbl_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lbl_heading"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="13dp"
        android:layout_marginLeft="13dp"
        android:layout_marginTop="33dp"
        android:text="@string/lbl_name"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/lbl_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lbl_name"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="13dp"
        android:layout_marginLeft="13dp"
        android:layout_marginTop="38dp"
        android:text="@string/lbl_details"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/txt_details"
        android:layout_width="269dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_name"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="33dp"
        android:layout_marginLeft="33dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="13dp"
        android:layout_marginRight="13dp"
        android:layout_toEndOf="@+id/lbl_details"
        android:layout_toRightOf="@+id/lbl_details"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/hint_txt_details"
        android:inputType="textMultiLine" />

    <TextView
        android:id="@+id/lbl_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lbl_details"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="13dp"
        android:layout_marginLeft="13dp"
        android:layout_marginTop="38dp"
        android:text="@string/lbl_image"
        android:textSize="18sp" />

    <ImageView
        android:id="@+id/img_bird"
        android:layout_width="208dp"
        android:layout_height="161dp"
        android:layout_below="@+id/txt_details"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:layout_toStartOf="@+id/btn_imageBrowse"
        android:layout_toLeftOf="@+id/btn_imageBrowse"
        android:layout_toEndOf="@+id/lbl_image"
        android:layout_toRightOf="@+id/lbl_image"
        android:background="@color/imgBackground"
        tools:srcCompat="@tools:sample/avatars[2]" />

    <TextView
        android:id="@+id/lbl_sound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/img_bird"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="14dp"
        android:layout_marginLeft="14dp"
        android:layout_marginTop="36dp"
        android:text="@string/lbl_sound"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btn_addBird"
        android:layout_width="334dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="13dp"
        android:layout_marginLeft="13dp"
        android:layout_marginEnd="13dp"
        android:layout_marginRight="13dp"
        android:layout_marginBottom="31dp"
        android:background="@color/colorPrimary"
        android:text="@string/btn_text_add_bird" />

    <TextView
        android:id="@+id/txt_rec_file_name"
        android:layout_width="267dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/img_bird"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="13dp"
        android:layout_marginRight="13dp"
        android:layout_toEndOf="@+id/lbl_sound"
        android:layout_toRightOf="@+id/lbl_sound"
        android:text="@string/lbl_sound_file_name"
        android:textSize="18sp" />

    <ImageButton
        android:id="@+id/btn_camera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_imageBrowse"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        android:backgroundTint="@color/colorPrimary"
        app:srcCompat="@android:drawable/ic_menu_camera" />

    <ImageButton
        android:id="@+id/btn_imageBrowse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_details"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="13dp"
        android:layout_marginRight="13dp"
        android:backgroundTint="@color/colorPrimary"
        app:srcCompat="@android:drawable/ic_menu_gallery" />

    <ImageButton
        android:id="@+id/btn_play"
        android:layout_width="wrap_content"
        android:layout_height="42dp"
        android:layout_below="@+id/txt_rec_file_name"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="79dp"
        android:layout_marginLeft="79dp"
        android:layout_marginTop="5dp"
        android:backgroundTint="@color/colorPrimary"
        app:srcCompat="@android:drawable/ic_media_play" />

    <ImageButton
        android:id="@+id/btn_record"
        android:layout_width="wrap_content"
        android:layout_height="42dp"
        android:layout_below="@+id/txt_rec_file_name"
        android:layout_marginStart="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="107dp"
        android:layout_toEndOf="@+id/btn_play"
        android:layout_toRightOf="@+id/btn_play"
        android:backgroundTint="@color/colorPrimary"
        app:srcCompat="@android:drawable/ic_btn_speak_now" />

    <ImageButton
        android:id="@+id/btn_soundBrowse"
        android:layout_width="wrap_content"
        android:layout_height="42dp"
        android:layout_below="@+id/txt_rec_file_name"
        android:layout_marginStart="1dp"
        android:layout_marginLeft="1dp"
        android:layout_marginTop="5dp"
        android:layout_toEndOf="@+id/btn_record"
        android:layout_toRightOf="@+id/btn_record"
        android:backgroundTint="@color/colorPrimary"
        app:srcCompat="@android:drawable/ic_menu_upload_you_tube" />
</RelativeLayout>